Bugfix contact submit button ios

--- a/css/form.scss
+++ b/css/form.scss
@@ -1,4 +1,5 @@
 @use 'variables' as *;
+@use 'mixins' as *;
 
 $bgColorTextArea: rgba(0, 0, 0, .6);
 
@@ -93,30 +94,34 @@ select.indent {
 input:focus,
 textarea:focus {
     background-color: rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 0 5px 1px rgba(255, 255, 255, .5);
-    -webkit-box-shadow: 0 0 5px 1px rgba(255, 255, 255, .5);
     box-shadow: 0 0 5px 1px rgba(255, 255, 255, .5);
     overflow: hidden;
 }
 
 .btn {
     margin-top: 1rem;
+    padding: 1rem 6rem 1rem;
+    text-align: center;
+    font-size: 24px;
     color: transparent;
     text-shadow: 0px 0px 1px $colorPrimary;
-    padding: 1rem 6rem 1rem;
     border: 4px $colorPrimary solid;
-    text-align: center;
-    background: none;
-    font-size: 24px;
-    cursor: pointer;
     background: rgba(0, 0, 0, 0.4); 
+    cursor: pointer;
 
     &:hover,
     &:active {
-        background: $colorPrimary;
-        outline: none;
-        box-shadow: 0 0 $colorPrimary;
-        top: 2px;
-        color: white;
+      background: $colorPrimary;
+      outline: none;
+      box-shadow: 0 0 $colorPrimary;
+      top: 2px;
+      color: white;
     }
+}
+
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  opacity: 1;
 }
